Closed
Bug 1938475
Opened 2 months ago
Closed 2 months ago
Crash in [@ mozilla::widget::WaylandSurface::AttachLocked]
Categories
(Core :: Widget: Gtk, defect, P2)
Core
Widget: Gtk
Tracking
()
RESOLVED
FIXED
135 Branch
Tracking | Status | |
---|---|---|
firefox-esr128 | --- | unaffected |
firefox133 | --- | unaffected |
firefox134 | --- | unaffected |
firefox135 | --- | fixed |
People
(Reporter: mccr8, Assigned: stransky)
References
(Regression)
Details
(Keywords: crash, regression, topcrash)
Crash Data
Attachments
(1 file)
Bug 1938475 [Wayland] Fallback to monitor screen scale if we're missing wayland surface one r?emilio
48 bytes,
text/x-phabricator-request
|
Details | Review |
Crash report: https://crash-stats.mozilla.org/report/index/69e61fa1-7a65-4e84-a74c-fd3060241219
MOZ_CRASH Reason:
MOZ_DIAGNOSTIC_ASSERT(scale != sNoScale)
Top 10 frames:
0 libxul.so mozilla::widget::WaylandSurface::AttachLocked(mozilla::widget::WaylandSurface... widget/gtk/WaylandSurface.cpp:1003
1 libxul.so mozilla::widget::WindowSurfaceWaylandMB::Commit(mozilla::detail::BaseAutoLock... widget/gtk/WindowSurfaceWaylandMultiBuffer.cpp:313
2 libxul.so mozilla::widget::WindowSurfaceWaylandMB::Commit(mozilla::gfx::IntRegionTyped<... widget/gtk/WindowSurfaceWaylandMultiBuffer.cpp:266
3 libxul.so mozilla::widget::WindowSurfaceProvider::EndRemoteDrawingInRegion(mozilla::gfx... widget/gtk/WindowSurfaceProvider.cpp:236
4 libxul.so mozilla::wr::RenderCompositorSWGL::CommitMappedBuffer(bool) gfx/webrender_bindings/RenderCompositorSWGL.cpp:246
5 libxul.so mozilla::wr::RenderCompositorSWGL::EndFrame(nsTArray<mozilla::wr::Box2D<int, ... gfx/webrender_bindings/RenderCompositorSWGL.cpp:262
6 libxul.so mozilla::wr::RendererOGL::UpdateAndRender(mozilla::Maybe<mozilla::gfx::IntSiz... gfx/webrender_bindings/RendererOGL.cpp:227
6 libxul.so mozilla::wr::RenderThread::UpdateAndRender(mozilla::wr::WrWindowId, mozilla::... gfx/webrender_bindings/RenderThread.cpp:851
7 libxul.so mozilla::wr::RenderThread::HandleFrameOneDocInner(mozilla::wr::WrWindowId, bo... gfx/webrender_bindings/RenderThread.cpp:666
8 libxul.so mozilla::wr::RenderThread::HandleFrameOneDoc(mozilla::wr::WrWindowId, bool, b... gfx/webrender_bindings/RenderThread.cpp:613
Reported by the crash spike detector. These all have the same crash reason, MOZ_DIAGNOSTIC_ASSERT(scale != sNoScale)
. Looks like a Nightly regression.
Assignee | ||
Comment 1•2 months ago
|
||
Will look at it, Thanks.
Comment 2•2 months ago
|
||
Set release status flags based on info from the regressing bug 1934497
status-firefox133:
--- → unaffected
status-firefox134:
--- → unaffected
status-firefox135:
--- → affected
status-firefox-esr128:
--- → unaffected
Assignee | ||
Comment 3•2 months ago
|
||
The crash here means we're painting to surface which is not visible yet so we don't have scale factor available. nsWindow code uses monitor scale factor for such case, we may follow that choice.
Assignee | ||
Updated•2 months ago
|
Flags: needinfo?(stransky)
Assignee | ||
Comment 4•2 months ago
|
||
Updated•2 months ago
|
Assignee: nobody → stransky
Status: NEW → ASSIGNED
Comment hidden (Intermittent Failures Robot) |
Updated•2 months ago
|
Comment 7•2 months ago
|
||
The bug is linked to a topcrash signature, which matches the following criterion:
- Top 10 desktop browser crashes on nightly
For more information, please visit BugBot documentation.
Keywords: topcrash
Pushed by stransky@redhat.com:
https://hg.mozilla.org/integration/autoland/rev/16d572654502
[Wayland] Fallback to monitor screen scale if we're missing wayland surface one r=emilio
Comment 9•2 months ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 2 months ago
Resolution: --- → FIXED
Target Milestone: --- → 135 Branch
Comment hidden (Intermittent Failures Robot) |
You need to log in
before you can comment on or make changes to this bug.
Description
•