Bug 1938475 [Wayland] Fallback to monitor screen scale if we're missing wayland surface one r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D232705